# vhrd-module-template

./: .gitignore  Cargo.toml  Embed.toml  build.rs  build_all.sh  counters.x  flasher.conf  memory.x
.cargo/: config.toml
.run/: Build [led, f072].run.xml  Check [afe, hx711, f072].run.xml  Check [button, f051, mcp25625].run.xml  Check [led, f072].run.xml  Check [pi, f072].run.xml  Check.run.xml  Run [afe, hx711, f072].run.xml  Run [button, f051, mcp25625].run.xml  Run [led, f072].run.xml  Run [pi, f072].run.xml  Run.run.xml
src/: blinker.rs  canbus.rs  config.rs  error_handlers.rs  logging.rs  main.rs  prelude.rs  ramp_generator.rs  ramp_generator2.rs  ramp_vesc.rs  tf_vesc.rs  units.rs  utils.rs  vt100.rs
src/module/: mod.rs
src/module/afe/: mod.rs
src/module/button/: mod.rs
src/module/led/: mod.rs
src/module/pi/: mod.rs
src/task/: blink.rs  health_check.rs  mod.rs
