[package]
name = "vhrd-module-template"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.16", features = ["rt"] } # Be careful updating, on 0.17 SPI is broken!
cortex-m-rtic = "0.6.0-alpha.5"
tim-systick-monotonic = { version = "0.1.0", path = "../tim-systick-monotonic", features = ["f0x1-tim15-tim17"] }
vhrdcan = { path = "../vhrdcan", version = "0.1.0" }
mcp25625 = { path = "../mcp25625", version = "0.1.0", optional = true }
rtt-target = { version = "0.3", features = ["cortex-m"], optional = true }

[features]
# Select chip
f051c8u = ["stm32f0xx-hal/stm32f051"]
f072c8u = ["stm32f0xx-hal/stm32f072"]
# Select CAN Bus driver, mcp25625 (for mcp2515 also) or mcp2518fd and/or canstm (only on F072)
can-mcp25625 = ["mcp25625"]
can-mcp2518fd = []
can-stm = ["f072c8u"]
# Select logging interface or none
log-text-rtt = ["rtt-target"] # Log in text format over RTT
log-text-can = [] # Log in text format over CAN
log-defmt-rtt = [] # Log in defmt binary format over RTT
log-defmt-can = [] # Log in defmt binary format over CAN
# Select logging level
log-level-default = []
log-level-trace = []
log-level-debug = []
log-level-info = []
log-level-warn = []
log-level-error = []

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true